tests/paczka1/small_fuzzy/20489571.err
Error in line 1: kxuWy8x54 A54 89,6
Error in line 9: kxuWy8x54 A54 99,5
